Remove unmapped histogram ResourceBundle.LoadLocaleResourcesError

It was never added to histograms.xml

BUG=642287

Review-Url: https://codereview.chromium.org/2298513002
Cr-Commit-Position: refs/heads/master@{#415703}

Former-commit-id: 604aab6941881e425c26d899d147f60eacb8312f